--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "date-and-time": "^2.0.1",
     "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.2",
     "pem": "^1.14.4",
     "ts-node": "^10.4.0",
@@ -25,6 +26,7 @@
     "@types/cors": "^2.8.12",
     "@types/date-and-time": "^0.13.0",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/pem": "^1.9.6",
     "nodemon": "^2.0.15"
   }
