--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "date-and-time": "^2.0.1",
     "express": "^4.17.2",
+    "google-auth-library": "^7.14.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.2",
     "pem": "^1.14.4",
